umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_ferrocene-radical(8)-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 179
bond_count: 250
sum_formula: C144BCl3F4Fe8N2O11P4RhW+2
graph6: "~?ArsP@`?OA?G_G?G????G?A??O??_?@???o??O??A???G???P???G???C????????@????G????O????O????G????A?????W??????????@?????A?????A?????@??????????????????BO?????C??????C????????B???????_??????A?????A????A??S?@???????C???????@??A??????????O???C????????O????????O?A??????G????????C????O?????????????C_????????C???????@????????????_?@???????O???????G???????G?c??O?????????H?????I?????_??????C???O??????????????????????G??????????@???????????A???????????B?????????????????C????@G????_????OPG@????@S@????????????????D????????CA?????????O????????????????????B????@???_???????????????????????????????@?????????????A?????????????A??????????????_?????????????G??????????????_?????????????A??????????????A??????????????A???????????????g??????????????CG??????????????O???????????????_???????????????_???????????????O???????????????@_???????????????E????????A?????????????????????????????????????????G???????a????????G???????????????????????????????G??G????????O?G?_????_???????????E????c?????????????????H??????????????G?????????????????S??????A??????????????O????????????????@?_?????????????????@??????????????C????G??????C_????D???????????_????Q?????????????????????????O??????????????C??????_???????????????G??????????????????????@???????????????O????_??????????????????????????????????__?_???????????????????C????????????????????OO???????????????A_????????????????????_?????????????????????O???????????????????????C?A?????????????????????A??????????????O??????C??????????????O??????A????O?????a?C??????????????C???????????????????????C?????????????????????????g??????????????????????A???????????_??????????????????????_????????????@?????????C??????????@???????????????????????OG???@O????????????????????????O?????????????????????W?????????????????????????????@?????????????????_??????????????????????????????O???????????????????????B????????????????????????C????????????????????????G????????????????????????O????????????????????????G????????????????????????C?????????????????????????O????????????????????????@_?G???????????????????????????????????????????????????????????????????????????_?????????????????????????O?????????????????????????C??????????????????????????O??????????????????????????g??????????????????????????_??????????????????????????_??????????????????????????A????????????????????????????????@???????C?????@?????????????????????O???????????????????????????_?????????????????????????????????????????@????????????????????????????W????@?????_???????????????????????????????????????????@??????????????????????????????G??????????????????????????O?G?????????????????????????????????????????????????????????@???????????????????????????????????????????????????????????_"
