umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_non-aromatic-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 33
sum_formula: C33
graph6: "`hc?GC@?GG_??@?@_???@??G??W?????C??@???G??C???A???B????????G???@????O????G????G????C????P"
