umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_non-proprietary-structure.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 29
sum_formula: C19BN4O4
graph6: "[hCGO_@?G@?@?@??_?O?@??C??G??G?@C?G????G???_??@???@????_??AI????"
