umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_one-structure-with-abs-flag-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 24
sum_formula: C12O12
graph6: W?dHGc???????H?C_@G?H??????????????H??@G??C_??H
