umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_same-marks-stereostructure.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 22
sum_formula: C23
graph6: VhCGGC@?G?_@?@??_?G?@??C_??C???O?C???C???A??
